@@ -1,6 +1,6 @@
 Package: universalmotif
 Title: Import, Modify, and Export Motifs with R
-Version: 1.3.60
+Version: 1.3.61
 Authors@R: person(c("Benjamin", "Jean-Marie"), "Tremblay", role = c("aut",
     "cre"), email = "b2tremblay@uwaterloo.ca")
 URL: https://github.com/bjmt/universalmotif
@@ -41,6 +41,7 @@ Collate:
     'get_bkg.R'
     'make_DBscores.R'
     'merge_motifs.R'
+    'motif_clusters.R'
     'motif_peaks.R'
     'motif_pvalue.R'
     'motif_rc.R'
