@@ -76,8 +76,10 @@ view_motifs <- function(motifs, use.type = "ICM", method = "ALLR",
   if (length(all_checks) > 0) stop(all_checks_collapse(all_checks))
   #---------------------------------------------------------
 
-  if (!score.strat %in% c("sum", "a.mean", "g.mean", "median", "wa.mean", "wg.mean"))
-    stop("'score.strat' must be one of 'sum', 'a.mean', 'g.mean', 'median', 'wa.mean', 'wg.mean'")
+  if (!score.strat %in% c("sum", "a.mean", "g.mean", "median", "wa.mean",
+                          "wg.mean", "fzt"))
+    stop("'score.strat' must be one of 'sum', 'a.mean', 'g.mean', 'median', ",
+         "'wa.mean', 'wg.mean', 'fzt'")
 
   if (score.strat %in% c("g.mean", "wg.mean") && method %in% c("ALLR", "ALLR_LL", "PCC"))
     stop(wmsg("'g.mean'/'wg.mean' is not allowed for methods which can generate negative values: ",
