@@ -1,7 +1,7 @@
 @Manual{kern,
   author={Matt Wand},
   year={2015},
-  title={KernSmooth: Functions for Kernel Smoothing Supporting Wand \& Jones (1995)},
+  title={KernSmooth: Functions for Kernel Smoothing Supporting Wand and Jones (1995)},
   note={R package version 2.23-15},
   url={https://CRAN.R-project.org/package=KernSmooth},
 }
@@ -70,7 +70,7 @@ Logos},
 
 @article{pvalues,
   title = {P-value-based regulatory motif discovery using positional weight matrices},
-  author = {H. Hartmann and E.W. Guth\"ohrlein and M. Siebert and and S. Luehr J. S\"oding},
+  author = {H. Hartmann and E.W. Guthohrlein and M. Siebert and and S. Luehr J. Soding},
   year = {2013},
   journal = {Genome Research},
   volume = {23},
@@ -377,10 +377,10 @@ throughput sequencing dataset},
 }
 
 @article{hellinger,
-  title={Neue Begr\"undung der Theorie quadratischer Formen von unendlichvielen Ver\"anderlichen},
+  title={Neue Begrundung der Theorie quadratischer Formen von unendlichvielen Veranderlichen},
   author={Ernst Hellinger},
   year={1909},
-  journal={Journal f\"ur die reine und angewandte Mathematik},
+  journal={Journal fur die reine und angewandte Mathematik},
   volume={136},
   pages={210--271},
 }
