@@ -73,7 +73,8 @@ threads. \code{nthreads = 0} uses all available threads.}
 \item{score.strat}{\code{character(1)} How to handle column scores calculated from
 motif alignments. "sum": add up all scores. "a.mean": take the arithmetic
 mean. "g.mean": take the geometric mean. "median": take the median.
-"wa.mean", "wg.mean": weighted arithmetic/geometric mean. Weights are the
+"wa.mean", "wg.mean": weighted arithmetic/geometric mean. "fzt": Fisher
+Z-transform. Weights are the
 total information content shared between aligned columns.}
 
 \item{output.report}{\code{character(1)} Provide a filename for \code{\link[=compare_motifs]{compare_motifs()}}
